--- a/m_index.html
+++ b/m_index.html
@@ -31,15 +31,15 @@
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">免费</span>
 			</a>
-			<a class="mui-tab-item" href="m_task.html">
+			<a class="mui-tab-item" href="http://www.sohu.com">
 				<span class="mui-icon mui-icon-email"></span>
 				<span class="mui-tab-label">任务</span>
 			</a>
-			<a class="mui-tab-item" href="m_finance.html">
+			<a class="mui-tab-item" href="'http://www.sina.com">
 				<span class="mui-icon mui-icon-contact"></span>
 				<span class="mui-tab-label">理财</span>
 			</a>
-			<a class="mui-tab-item" href="m_account_index.html">
+			<a class="mui-tab-item" href="http://www.baidu.com">
 				<span class="mui-icon mui-icon-gear"><span class="mui-badge">9</span></span>
 				<span class="mui-tab-label">我的</span>
 			</a>
@@ -49,7 +49,8 @@
 	<script type="text/javascript" charset="utf-8">
 		//mui初始化
 		mui.init();
-		var subpages = ['m_welfare.html', 'm_task.html', 'm_finance.html', 'm_account_index.html'];
+	//	var subpages = ['m_welfare.html', 'm_task.html', 'm_finance.html', 'm_account_index.html'];
+		var subpages = ['m_welfare.html', 'http://www.sina.com', 'http://www.baidu.com'];
 		var subpage_style = {
 			top: '45px',
 			bottom: '51px'
