--- a/m_index.html
+++ b/m_index.html
@@ -19,6 +19,7 @@
 	    <meta name="format-detection" content="telphone=no, email=no"/>
 	    <title>挖福利</title>
 	    <script src="js/mui.min.js"></script>
+	    <script src="js/app.js"></script>
 	    <link href="css/mui.min.css" rel="stylesheet"/>
 	</head>
 	<body>
@@ -27,15 +28,15 @@
 			<h1 id="title" class="mui-title">免费</h1>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="m_welfare.html">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="m_welfare_main.html">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">免费</span>
 			</a>
-			<a class="mui-tab-item" href="m_task.html">
+			<a class="mui-tab-item" href="m_task_main.html">
 				<span class="mui-icon mui-icon-email"></span>
 				<span class="mui-tab-label">任务</span>
 			</a>
-			<a class="mui-tab-item" href="m_finance.html">
+			<a class="mui-tab-item" href="m_finance_main.html">
 				<span class="mui-icon mui-icon-contact"></span>
 				<span class="mui-tab-label">理财</span>
 			</a>
@@ -49,7 +50,7 @@
 	<script type="text/javascript" charset="utf-8">
 		//mui初始化
 		mui.init();
-		var subpages = ['m_welfare.html', 'm_task.html', 'm_finance.html', 'm_account_index.html'];
+		var subpages = ['m_welfare_main.html', 'm_task_main.html', 'm_finance_main.html', 'm_account_index.html'];
 		var subpage_style = {
 			top: '45px',
 			bottom: '51px'
@@ -111,5 +112,12 @@
 				defaultTab.classList.add('mui-active');
 			}
 		});
+		mui.back = function() {
+			mui.confirm('确定退出应用？', '提示', ['确定', '取消'], function(e) {
+				if (e.index === 0) {
+					plus.runtime.quit();
+				}
+			});
+		};
 	</script>
 </html>
