--- a/m_welfare_pullfresh.html
+++ b/m_welfare_pullfresh.html
@@ -158,13 +158,7 @@
 			wa.dbReady(function(isFirst) {
 				//document.body.style.backgroundColor = '#efeff4';
 				//第一次显示，从服务器中加载
-				if (isFirst) {
-					clearNewsList();
-					mui.plusReady(function() {
-						getFeed();
-						mui('#pullrefresh').pullRefresh().endPullupToRefresh();
-					});
-				} else {
+				if (!isFirst) {
 					//非第一次，直接从本地数据库中读取
 					//加载初始化数据
 					wa.getNews(Number.MAX_VALUE, 10,function(news) {
@@ -176,110 +170,62 @@
 					wa.getRecom(function(recoms) {
 						add_doms_recom(recoms, false);
 					}, throwGetNewsError);
-					
-					refresh();
 				}
+				mui('#pullrefresh').pullRefresh().pulldownLoading();
 			});
-			mui.plusReady(function() {
-				//关闭splash界面
-				plus.navigator.closeSplashscreen();
-				//获取图片轮播区的新闻
-				getSlider(true);
-				//2秒之后，自动刷新
-				setTimeout(function() {
-					pulldownRefresh();
-				}, 2000);
-			});
-			function refresh(){
+//			mui.plusReady(function() {
+//				//关闭splash界面
+//				plus.navigator.closeSplashscreen();
+//				//获取图片轮播区的新闻
+//				getSlider(true);
+//				//2秒之后，自动刷新
+//				setTimeout(function() {
+//					pulldownRefresh();
+//				}, 2000);
+//			});
+			function pulldownRefresh() {
+				console.log('pulldown');
 				latestPubDate = Number.MAX_VALUE;
-				newsEl.innerHTML = ''; //清空所有
 				if (!hasMore) { //当清除缓存之前已上拉加载到底需要重置pullrefresh
 					mui('#pullrefresh').pullRefresh().refresh(true);
 					hasMore = true;
 				}
-				mui('#pullrefresh').pullRefresh().pulldownLoading(function() {
-					//获取新闻列表，存储数据库
-					wa.getFeed(function(hasNew) {
-						console.log('终于成功了');
-						//显示列表数据
-						wa.getNews(Number.MAX_VALUE, 10,function(news) {
-							news_group.innerHTML = '';
-							add_doms_news(news, true);
-							processNews(news, 'news_img_')
-						}, throwGetNewsError);
-						wa.getSlider(function(sliders) {
-							slide_group.innerHTML = '';
-							add_doms_slider(sliders, true);
-							processNews(sliders, 'slider_img_')
-						}, throwGetNewsError);
-						wa.getRecom(function(recoms) {
-							recom_group.innerHTML = '';
-							add_doms_recom(recoms, true);
-							processNews(recoms, 'recom_img_')
-						}, throwGetNewsError);
-						mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
-					}, function() {
-						mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
-					});
-				});
-			}
-			/** 新版首次进入执行代码结束 **/
-			
-	
-
-
-			function pulldownRefresh() {
-				//console.log('pulldown');
 				wa.getFeed(function(hasNew) {
-					//更新顶部轮播区域
-					getSlider();
-					if (hasNew) {
-						wa.getNews(false, hasNew, function(news) {
-							refresh(news);
-						}, throwGetNewsError);
-					} else {
-						setTimeout(function() {
-							mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
-						}, 800);
-					}
-				}, throwGetNewsError);
+					console.log('终于成功了');
+					//显示列表数据
+					wa.getNews(Number.MAX_VALUE, 10,function(news) {
+						news_group.innerHTML = '';
+						add_doms_news(news, true);
+						processNews(news, 'news_img_')
+					}, throwGetNewsError);
+					wa.getSlider(function(sliders) {
+						slide_group.innerHTML = '';
+						add_doms_slider(sliders, true);
+						processNews(sliders, 'slider_img_')
+					}, throwGetNewsError);
+					wa.getRecom(function(recoms) {
+						recom_group.innerHTML = '';
+						add_doms_recom(recoms, true);
+						processNews(recoms, 'recom_img_')
+					}, throwGetNewsError);
+					mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
+				}, function() {
+					mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
+				});
 			};
 	
 			function clearNewsList() {
 				news_group.innerHTML = '';
 			};
 
-			function pullupRefresh(noHandlePullrefresh, clear) {
+			function pullupRefresh() {
 				//console.log('pullup');
-				wa.getNews(latestPubDate, undefined, function(news) {
-					if (news && news.length > 0) {
-						if (clear) {
-							clearNewsList();
-						}
-						latestPubDate = news.item(news.length - 1).pubDate;
-						console.time("template");
-						for (var i = 0, len = news.length; i < len; i++) {
-							divEl.innerHTML = news_item(processNews(news.item(i)));
-							newsEl.appendChild(divEl.firstElementChild);
-						}
-						console.timeEnd("template");
-						if (!noHandlePullrefresh) {
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh();
-						}
-					} else {
-						hasMore = false;
-						if (!noHandlePullrefresh) {
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
-						}
-						if (clear) {
-							clearNewsList();
-						}
+				mui.getNews(NEWS_URL + '?lastDate=' + latestPubDate, function(items) {
+					if (items) {
+						var news = items;
+						add_doms_news(news);
 					}
-					console.timeEnd("进入页面到呈现");
-				}, function() {
-					if (!noHandlePullrefresh) {
-						mui('#pullrefresh').pullRefresh().endPullupToRefresh();
-					}
+	
 				});
 			}
 			var downloads = {};
@@ -344,6 +290,7 @@
 				if (!news){
 					return;
 				}
+				latestPubDate = news[news.length-1].pubDate;
 				news.forEach(function(wel){
 					if(delay){
 						wel.image = 'img/blank.jpg';
@@ -381,7 +328,7 @@
 					if(delay){
 						slider.image = 'img/blank.jpg';
 					}
-				}
+				});
 				var adv_first = sliders[0];
 				var adv_last = sliders[sliders.length-1]
 				var adv_first_div = document.createElement('div');
@@ -395,7 +342,7 @@
 					adv_div.innerHTML= '<a data_id="' + slider.id + '"><img id="slider_img_' + 
 						slider.id + '"src="'+ slider.image + '"></a>';
 					slide_group.appendChild(adv_div);
-				}
+				});
 				var adv_last_div = document.createElement('div');
 				adv_last_div.className = 'mui-slider-item mui-slider-item-duplicate';
 				adv_last_div.innerHTML= '<a data_id="' + adv_first.id + '"><img id="slider_img_' + 
@@ -405,121 +352,7 @@
 				gallery.slider().gotoItem(0);
 			}
 		</script>
-		<script>
-			mui.init({
-				pullRefresh: {
-					container: '#pullrefresh',
-					up: {
-						contentrefresh: '正在加载...',
-						callback: pullupRefresh,
-						auto:true
-					}
-				}
-			});
-			/**
-			 * 下拉刷新具体业务实现
-			 */
-			var count = 0;
-			var get_wel_url = "http://m.wafuli.cn/welfare_json";
-			var get_index_info_url = "http://m.wafuli.cn/app";
-			function get_wel_list(n){
-				mui.ajax(get_wel_url,{
-					data:{
-						count:n,
-					},
-					dataType:'json',//服务器返回json格式数据
-					type:'get',//HTTP请求类型
-					timeout:10000,//超时时间设置为10秒；
-	//				headers:{'Content-Type':'application/json'},
-					success:function(data){
-						if (!data.length){
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
-						}
-						else {
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(false); //参数为true代表没有更多数据了。
-							var table = document.body.querySelector('.mui-table-view');
-	//						var cells = document.body.querySelectorAll('.mui-table-view-cell');
-							for (var i in data) {
-								var wel = data[i];
-								var li = document.createElement('li');
-								li.className = 'mui-table-view-cell';
-								str_block = '<a class="clearfix" href="' + wel.url + '"><img src="'+ 'http://m.wafuli.cn' +
-												wel.picurl + '" /><div class="li-info"><h6>' + wel.title + '</h6>';
-								if (wel.is_hot){
-									str_block += '<span class="after-hot">hot</span>';
-								}
-								// else{
-								// 	str_block += '<span class="after-new">new</span>';
-								// }
-								str_block += '<p class="first">';
-								marks = wel.marks;
-								for (var j in marks){
-									str_block += '<span>' + marks[j] + '</span>';
-								}
-								str_block += '</p><p><span class="s1">'+wel.provider+'</span></p>'+
-												'<p><span class="s3">'+wel.time_limit+'</span><span class="s2">'+
-												wel.view_count +'</span></p></div></a>';
-								li.innerHTML = str_block;
-								table.appendChild(li);
-							}
-						}
-	
-					},
-					error:function(xhr,type,errorThrown){
-						alert(type);
-					}
-				});
-			}
-			function pullupRefresh() {
-//				if (count == 0){
-//					mui('#pullrefresh').pullRefresh().scrollTo(0,0);
-//				}
-				get_wel_list(count++);
-			}
-			
-			
-			mui.ready(function(){
-				mui.ajax(get_index_info_url,{
-					dataType:'json',//服务器返回json格式数据
-					type:'get',//HTTP请求类型
-					timeout:10000,//超时时间设置为10秒；
-	//				headers:{'Content-Type':'application/json'},
-					success:function(data){
-						var slide_group = document.body.querySelector('.mui-slider-group');
-						var adv_list = data.adv_info_list;
-						if (adv_list) {
-							var adv_first = adv_list[0];
-							var adv_last = adv_list[adv_list.length-1]
-							var adv_first_div = document.createElement('div');
-							adv_first_div.className = 'mui-slider-item mui-slider-item-duplicate';
-							adv_first_div.innerHTML= '<a href="' + adv_last.url + '"><img src="'+ adv_last.pic_url + '"></a>';
-							slide_group.appendChild(adv_first_div);
-							for (i in adv_list){
-								var pic_url = adv_list[i].pic_url;
-								var url = adv_list[i].url;
-								var adv_div = document.createElement('div');
-								adv_div.className = 'mui-slider-item';
-								adv_div.innerHTML= '<a href="' + url + '"><img src="'+ pic_url + '"></a>';
-								slide_group.appendChild(adv_div);
-							}
-							var adv_last_div = document.createElement('div');
-							adv_last_div.className = 'mui-slider-item mui-slider-item-duplicate';
-							adv_last_div.innerHTML= '<a href="' + adv_first.url + '"><img src="'+ adv_first.pic_url + '"></a>';
-							slide_group.appendChild(adv_last_div);
-							var gallery = mui('.mui-slider');
-							gallery.slider().gotoItem(0);
-						}
-						document.getElementById('new_num').innerText = data.new_wel_num;
-						document.getElementById('all_num').innerText = data.all_wel_num;
-						
-//						var today_recom = document.getElementsByClassName()
-					},
-					error:function(xhr,type,errorThrown){
-						alert(type);
-					}
-				});
-			});
-		</script>
+
 	</body>
 
 </html>
