--- a/m_finance_main.html
+++ b/m_finance_main.html
@@ -23,18 +23,18 @@
 		<meta http-equiv="Cache-Control" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<title>理财福利</title>
-		<script src="{%static 'js/mui.min.js'%}"></script>
-		<script src="{%static 'js/mui.pullToRefresh.js'%}"></script>
-		<script src="{%static 'js/mui.pullToRefresh.material.js'%}"></script>
-		<link href="{%static 'css/mui.min.css'%}" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="{%static 'css/m_common.css'%}" />
-		<link rel="stylesheet" type="text/css" href="{%static 'css/m_finance.css'%}" />
+		<script src="js/mui.min.js"></script>
+		<script src="js/mui.pullToRefresh.js"></script>
+		<script src="js/mui.pullToRefresh.material.js"></script>
+		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="css/m_common.css" />
+		<link rel="stylesheet" type="text/css" href="css/m_finance.css" />
 	</head>
 
 	<body>
 		<header class="clearfix">
-        <img src="{%static 'images/logo.png'%}" alt="wafuli_logo" />
-        <a  class="fr" href="#"><img src="{%static 'images/diannao.png'%}" alt="前往pc端" /></a>
+        <img src="images/logo.png" alt="wafuli_logo" />
+        <a  class="fr" href="#"><img src="images/diannao.png" alt="前往pc端" /></a>
     </header>
 		<div class="mui-content">
 			<!--选项卡部分-->
@@ -112,25 +112,25 @@
 			<ul class="clearfix tc">
 				<li>
 					<a href="{%url 'index'%}">
-						<img src="{%static 'images/nav1.png'%}" />
+						<img src="images/nav1.png" />
 						<span>免费福利</span>
 					</a>
 				</li>
 				<li>
 					<a href="{%url 'task'%}">
-						<img src="{%static 'images/nav2.png'%}" />
+						<img src="images/nav2.png" />
 						<span>体验福利</span>
 					</a>
 				</li>
 				<li class="on">
 					<a href="{%url 'finance'%}">
-						<img src="{%static 'images/nav3s.png'%}" />
+						<img src="images/nav3s.png" />
 						<span>理财福利</span>
 					</a>
 				</li>
 				<li>
 					<a href="{%url 'account_index'%}">
-						<img src="{%static 'images/nav4.png'%}" />
+						<img src="images/nav4.png" />
 						<span>个人中心</span>
 					</a>
 				</li>
