--- a/m_index.html
+++ b/m_index.html
@@ -50,7 +50,8 @@
 	<script type="text/javascript" charset="utf-8">
 		//mui初始化
 		mui.init();
-		var subpages = ['m_welfare_main.html', 'm_task_main.html', 'm_finance_main.html', 'm_account_index.html'];
+//		var subpages = ['m_welfare_main.html', 'm_task_main.html', 'm_finance_main.html', 'm_account_index.html'];
+		var subpages = ['m_welfare_main.html','http://www.baidu.com', 'http://www.baidu.com'];
 		var subpage_style = {
 			top: '45px',
 			bottom: '51px'
@@ -60,6 +61,9 @@
 	
 		//创建子页面，首个选项卡页面显示，其它均隐藏；
 		mui.plusReady(function() {
+			preload();
+		});
+		function preload(){
 			var self = plus.webview.currentWebview();
 			for(var i = 0; i < 4; i++) {
 				var temp = {};
@@ -72,7 +76,36 @@
 				}
 				self.append(sub);
 			}
-		});
+			var headerWebview = mui.preload({
+				url: header,
+				id: "detail-main",
+				styles: {
+					popGesture: "hide",
+				},
+				extras: {
+					mType: 'main'
+				}
+			});
+			//预加载共用子webview
+			var subWebview = mui.preload({
+				url: !content ? "" : content,
+				id: "detail-content",
+				styles: {
+					top: '45px',
+					bottom: '0px',
+				},
+				extras: {
+					mType: 'sub'
+				}
+			});
+			headerWebview.addEventListener('titleUpdate', function() {
+				setTimeout(function() {
+					subWebview.show();
+				}, 50);
+			});
+			subWebview.hide();
+			headerWebview.append(subWebview);
+		}
 		//当前激活选项
 		var activeTab = subpages[0];
 		var title = document.getElementById("title");
